[project]
name = "lecl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "chromadb>=1.2.2",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "langserve>=0.3.3",
    "mysql-connector-python>=9.5.0",
    "numexpr>=2.14.1",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sse-starlette>=3.0.2",
    "unstructured>=0.18.15",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
